--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .jumbotron {
   padding-top: 6rem;
-  background: url(img/bg.png);
+  background: url(bg.png);
   background-size: 100% 90%;
   color: #00ffff;
 }
